<resources>
    <string name="app_name">MotoLife</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_desc">moto_life_logo</string>
    <string name="motolife">MotoLife</string>
    <string name="motolife_motto">Ride hard or stay home</string>
    <string name="title_activity_map">Map</string>
    <string name="RIDING_WAKE_LOCK">RIDING_WAKE_LOCK</string>
    <string name="dark_mode_button_text">Dark mode</string>
    <string name="write_message_to_user">Napisz wiadomość</string>
    <string name="poke_user">Zaczep</string>
    <string name="exit">Wyjdź</string>
    <string name="navbar_bottom_username_text">Username</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="e_mail">E-mail</string>
    <string name="send">Send</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to login</string>
    <string name="dont_have_acc">Don\'t have account? Register</string>
    <string name="logout">Logout</string>
    <string name="localization_permission_info">You have to give the localization permission to keep using MotoLife.</string>
    <string name="gps_network_not_enabled">GPS is turned off.</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="Cancel">Cancel</string>
    <string name="default_splash_check_text">Checking connection...</string>
    <string name="check_internet_permissions_text">Checking internet permissions...</string>
    <string name="checking_api_connection">Checking connection to server...</string>
    <string name="checking_user_auth">Checking user authorization...</string>
    <string name="getting_user_auth_token">Getting user authorization token...</string>
    <string name="finalizing_text_progress">Finalizing...</string>
    <string name="Loading">Loading...</string>
    <string name="no_gps_signal_logo">No gps signal logo</string>
    <string name="switch_on_gps">Switch on GPS</string>
    <string name="username_user_list">Username</string>
    <string name="user_profile_desc">user profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send_message_image_button">send_message_image_button</string>
    <string name="triple_dot">...</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="search_user">Search user...</string>
    <string name="seen_info">Seen</string>
    <string name="delivered_info">Delivered</string>
    <string name="checkin_connection_info_splash">Checking connection...</string>
    <string name="geting_user_token_info_splash">Getting user token...</string>
    <string name="checking_auth_info_splash">Checking authorization...</string>
    <string name="connection_error_info_splash">Connection error, retrying...</string>
    <string name="connection_error">Connection Error!</string>
    <string name="connection_established">Connection established!</string>
    <string name="give_permissions">Give permissions</string>
</resources>
