<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_dark_gradient"
    tools:context="com.app.motolife.SplashActivity">

    <ImageView
        android:id="@+id/motoLifeLogo"
        android:layout_width="316dp"
        android:layout_height="120dp"
        android:layout_marginTop="175dp"
        android:contentDescription="@string/_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moto_line_white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_subrayada"
        android:text="@string/motolife"
        android:textColor="#B8761F"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motoLifeLogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat_subrayada"
        android:text="@string/motolife_motto"
        android:textColor="#C8B8761F"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/email_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints="true"
        android:background="#111111"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#eeeeee"
        android:textColorHint="#cccccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="Password"
        android:background="#111111"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#eeeeee"
        android:textColorHint="#cccccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="#222222"
        android:textColor="@color/white"
        android:gravity="center_horizontal|center_vertical|center"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/go_to_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/go_to_register"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:text="@string/dont_have_acc"
        android:textColor="#96540D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>