<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Switch
        android:id="@+id/dark_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/dark_mode_button_text"

        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.048"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottomNavBarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5sp"
        android:text="@string/navbar_bottom_username_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textFontWeight="900"
        android:visibility="invisible"
        map:layout_constraintBottom_toTopOf="@+id/map_bottom_nav"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/map_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        map:layout_constraintBottom_toBottomOf="@+id/map"
        map:menu="@menu/bottom_nav_menu"
        android:visibility="invisible"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="66dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:text="@string/logout"
        android:textSize="10dp"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.73"
        map:layout_constraintStart_toEndOf="@+id/dark_mode_switch"
        map:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
