<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.motolife.chat.MessageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout_chat_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/chat_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/browser_actions_divider_color"
            android:paddingTop="45dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_child_care_black_24dp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/Loading"
                android:textColor="#eee"
                android:textSize="28sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relative_msg_input"
        android:layout_below="@+id/bar_layout_chat_window" />

    <RelativeLayout
        android:id="@+id/relative_msg_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:padding="5dp">

        <EditText
            android:id="@+id/message_to_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:layout_toStartOf="@id/send_message_button"
            android:background="@android:color/transparent"
            android:textColorHint="@color/Gray"
            android:hint="@string/type_a_message" />

        <ImageButton
            android:id="@+id/send_message_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_send_arrow"
            android:contentDescription="@string/send_message_image_button" />
    </RelativeLayout>

</RelativeLayout>